--- a/Enfemenino Editorial/assets/css/main.css
+++ b/Enfemenino Editorial/assets/css/main.css
@@ -153,13 +153,13 @@ input, select, textarea {
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #f56a6a;
+		color: #951f60;
 		text-decoration: none;
 	}
 
 		a:hover {
-			border-bottom-color: #f56a6a;
-			color: #f56a6a !important;
+			border-bottom-color: #951f60;
+			color: #951f60 !important;
 		}
 
 			a:hover strong {
@@ -167,7 +167,7 @@ input, select, textarea {
 			}
 
 	strong, b {
-		color: #3d4449;
+		color: #951f60;
 		font-weight: 600;
 	}
 
@@ -261,7 +261,7 @@ input, select, textarea {
 	}
 
 	blockquote {
-		border-left: solid 3px rgba(210, 215, 217, 0.75);
+		border-left: solid 3px #951f60;
 		font-style: italic;
 		margin: 0 0 2em 0;
 		padding: 0.5em 0 0.5em 2em;
@@ -293,7 +293,7 @@ input, select, textarea {
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px rgba(210, 215, 217, 0.75);
+		border-bottom: solid 1px #951f60;
 		margin: 2em 0;
 	}
 
@@ -1922,7 +1922,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #7f888f;
+			color: #951f60;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -1961,14 +1961,14 @@ input, select, textarea {
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: #3d4449;
-			border-color: #3d4449;
+			border-color: #951f60;
 			color: #ffffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #f56a6a;
+			border-color: #951f60;
 			box-shadow: 0 0 0 1px #f56a6a;
 		}
 
@@ -1981,7 +1981,7 @@ input, select, textarea {
 	}
 
 	::-webkit-input-placeholder {
-		color: #9fa3a6 !important;
+		color: #951f60 !important;
 		opacity: 1.0;
 	}
 
