--- a/Formatos ADS/ZoomExplosivo/300x250/ism/css/my-slider.css
+++ b/Formatos ADS/ZoomExplosivo/300x250/ism/css/my-slider.css
@@ -15,8 +15,6 @@
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  width: 300px;
-  height: 170px;
 }
 @-webkit-keyframes ism-fadein {
   from { opacity: 0; }
@@ -287,7 +285,7 @@ p.ism-badge a.ism-link:hover {
 
 #my-slider {
     width: 400px;
-    height: 200px;
+    height: 250px;
     border-radius: 0;
 }
 
@@ -353,31 +351,40 @@ p.ism-badge a.ism-link:hover {
 
 /* SLIDES */
 
-#my-slider .ism-slide-0 .ism-img-frame {
-    width: 100%;
+#my-slider .ism-slide-0 img {
+    width: 100%; height: 100%;
 }
 
 #my-slider .ism-slide-0 .ism-img {
-    width: 100%;
-    top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
+    width: 100%; height: 100%;
 }
 
-#my-slider .ism-slide-1 .ism-img-frame {
-    width: 100%;
+#my-slider .ism-slide-1 img {
+    width: 100%; height: 100%;
 }
 
 #my-slider .ism-slide-1 .ism-img {
-    width: 100%;
-    top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
+    width: 100%; height: 100%;
 }
 
-#my-slider .ism-slide-2 .ism-img-frame {
-    width: 100%;
+#my-slider .ism-slide-2 img {
+    width: 100%; height: 100%;
 }
 
 #my-slider .ism-slide-2 .ism-img {
-    width: 100%;
-    top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
+    width: 100%; height: 100%;
+}
+
+#my-slider li.ism-slide-0 .ism-img {
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+
+#my-slider li.ism-slide-1 .ism-img {
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+
+#my-slider li.ism-slide-2 .ism-img {
+    top: 0; bottom: 0; left: 0; right: 0;
 }
 
 
