--- a/Formatos ADS/ZoomExplosivo/300x600/ism/css/my-slider.css
+++ b/Formatos ADS/ZoomExplosivo/300x600/ism/css/my-slider.css
@@ -27,7 +27,8 @@
 .ism-slider .ism-slides {
   list-style: none;
   position: absolute;
-  height: 100%;
+  width: 300px;
+  height: 450px;
   top: 0;
   padding: 0 !important;
   margin-top: 0;
@@ -36,7 +37,8 @@
 }
 
 .ism-slider li.ism-slide {
-  height: 100%;
+  width: 300px;
+  height: 450px;
   overflow: hidden;
   position: absolute;
   display: block;
@@ -51,8 +53,8 @@
 .ism-slider .ism-img-frame {
   display: block;
   position: absolute;
-  width: 100%;
-  height: 100%;
+ width: 300px;
+  height: 450px;
 }
 
 .ism-slider a.ism-image-link {
@@ -62,8 +64,8 @@
   display: block;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 450px;
 }
 
 .ism-slider .ism-img {
