--- a/HYUNDAI I30/Fijos/ism/css/my-slider.css
+++ b/HYUNDAI I30/Fijos/ism/css/my-slider.css
@@ -11,17 +11,10 @@
   cursor: default;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.1);
-  -webkit-animation: ism-fadein 3s;
+ 
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-}
-@-webkit-keyframes ism-fadein {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-@-webkit-keyframes ism-loading {
-  50% { left: 120px; }
 }
 
 .ism-slider .ism-slides {
@@ -98,17 +91,7 @@
   display: block;
 }
 
-.ism-caption {
-  -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
-  padding: 0 1em;
-  text-shadow: none;
-  line-height: 1.2em;
-  padding: 0.25em 0.5em;
-  width: auto;
-  height: auto;
-  text-align: center;
-  visibility: hidden;
-}
+.
 
 a.ism-image-link .ism-caption, a.ism-caption {
   text-decoration: none;
@@ -220,70 +203,13 @@ p.ism-badge a.ism-link:hover {
   animation: zoomin 0.81s linear 1;
 }
 
-@-webkit-keyframes zoomin {
-  0% { -webkit-transform: scale(1.0); transform: scale(1.0); }
-  100% { -webkit-transform: scale(3.0); transform: scale(3.0); }
-}
-@keyframes zoomin {
-  0% { -webkit-transform: scale(1.0); transform: scale(1.0); }
-  100% { -webkit-transform: scale(3.0); transform: scale(3.0); }
-}
 
-@-webkit-keyframes fadein {
-  0% { opacity: 0; }
- 100% { opacity: 1; }
-}
-@keyframes fadein {
-  0% { opacity: 0; }
- 100% { opacity: 1; }
-}
-
-@-webkit-keyframes slidein {
-  0% { -webkit-transform: translate(-1200px, 0); transform: translate(-1200px, 0); }
-  100% { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
-}
-@keyframes slidein {
-  0% { -webkit-transform: translate(-1200px, 0); transform: translate(-1200px, 0); }
-  100% { -webkit-transform: translate(0, 0); transform: translate(0, 0); }
-}
-
-@-webkit-keyframes popin {
-  50% { -webkit-transform: scale(1.2); transform: scale(1.2); }
-}
-@keyframes popin {
-  50% { -webkit-transform: scale(1.2); transform: scale(1.2); }
-}
-
-.ism-zoom-pan {
-  -webkit-animation: zoompan 20.0s linear 1;
-  animation: zoompan 20.0s linear 1;
-}
-@-webkit-keyframes zoompan {
-  0% { -webkit-transform: translate(0, 0) scale(1.0); transform: translate(0, 0) scale(1.0); }
-  50% { -webkit-transform: translate(-5%, -5%) scale(1.3); transform: translate(-5%, -5%) scale(1.3); }
-  100% { -webkit-transform: translate(0, 0) scale(1.0); transform: translate(0, 0) scale(1.0); }
-}
-@keyframes zoompan {
-  0% { -webkit-transform: translate(0, 0) scale(1.0); transform: translate(0, 0) scale(1.0); }
-  50% { -webkit-transform: translate(-5%, -5%) scale(1.3); transform: translate(-5%, -5%) scale(1.3); }
-  100% { -webkit-transform: translate(0, 0) scale(1.0); transform: translate(0, 0) scale(1.0); }
-}
 
 .ism-zoom-rotate {
   -webkit-animation: zoomrotate 20.0s linear 1;
   animation: zoomrotate 20.0s linear 1;
 }
-@-webkit-keyframes zoomrotate {
-  0% { -webkit-transform: rotate(0) scale(1.0); transform: rotate(0) scale(1.0); }
-  50% { -webkit-transform: rotate(-5deg) scale(1.3); transform: rotate(-5deg) scale(1.3); }
-  100% { -webkit-transform: rotate(0) scale(1.0); transform: rotate(0) scale(1.0); }
-}
-@keyframes zoomrotate {
-  0% { -webkit-transform: rotate(0) scale(1.0); transform: rotate(0) scale(1.0); }
-  50% { -webkit-transform: rotate(-5deg) scale(1.3); transform: rotate(-5deg) scale(1.3); }
-  100% { -webkit-transform: rotate(0) scale(1.0); transform: rotate(0) scale(1.0); }
-}
-/* SLIDER */
+
 
 #my-slider {
     width: 400px;
